--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "npm run fetch-feeds && npm run fetch-contributing && docusaurus start",
-    "build": "npm run fetch-feeds && npm run fetch-contributing && docusaurus build",
+    "start": "npm run fetch-feeds && docusaurus start",
+    "build": "npm run fetch-feeds && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -15,8 +15,7 @@
     "typecheck": "tsc",
     "prettier": "prettier --write .",
     "prettier-lint": "prettier --check .",
-    "fetch-feeds": "node scripts/fetch-feeds.js",
-    "fetch-contributing": "node scripts/fetch-contributing.js"
+    "fetch-feeds": "node scripts/fetch-feeds.js"
   },
   "dependencies": {
     "@1password/docusaurus-plugin-stored-data": "^1.0.0",
